--- a/app/assets/stylesheets/filter.css.sass
+++ b/app/assets/stylesheets/filter.css.sass
@@ -196,3 +196,68 @@
         font-size: 16px
         color: $font_color
 
+#article-modal
+
+  display: none
+  z-index: 999
+  position: fixed
+
+  top: 50%
+  left: 50%
+
+  margin-left: -310px
+  margin-top: -160px
+
+  width: 580px
+  height: 280px
+  padding: 20px
+
+
+  background: #fff
+
+
+  .title
+    text-align: center
+    font-family: 'HelveticaNeue-Light'
+    font-size: 18px
+    color: $font_color
+    height: 50px
+    line-height: 50px
+    background: #F7F7F7
+
+
+  form
+    display: block
+    margin-top: 50px
+
+  input
+    display: block
+    margin: 0px auto
+    margin-bottom: 20px
+    width: 240px
+    height: 50px
+    background: #fff
+    border: 1px solid #ccc
+    padding: 0px 20px
+
+    font-family: 'HelveticaNeue-Light'
+    font-size: 14px
+    color: $font_color
+
+
+  .button
+    margin: 0px auto
+    margin-bottom: 20px
+    width: 280px
+    height: 50px
+    line-height: 52px
+    text-align: center
+    background: $blue_color
+    color: #fff
+    font-family: 'HelveticaNeue-Regular'
+    font-size: 16px
+    cursor: pointer
+    border: none
+
+    &:hover
+      background: #509CF2
