--- a/app/assets/stylesheets/products.css.sass
+++ b/app/assets/stylesheets/products.css.sass
@@ -8,6 +8,7 @@
     height: 4px
     margin: 20px 0px
     background: url('/assets/products_separator.png') no-repeat
+    background-size: 940px 1px
 
   li
     display: inline-block
