--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -57,3 +57,32 @@ body
 a
   color: $blue_color
   text-decoration: none
+
+.not-found
+  margin: 50px 0
+  background: $gray_bg_color
+  font-size: 24px
+  font-family: 'HelveticaNeue-Light'
+  color: $soft_font_color
+
+  height: 400px
+  line-height: 400px
+  text-align: center
+
+
+.footer
+  margin-top: 50px
+  .separator
+    width: 100%
+    height: 2px
+    margin: 20px 0px
+    background: url('/assets/products_separator.png') no-repeat
+    background-size: 940px 1px
+
+  .content
+    height: 60px
+    padding: 20px 0
+    font-family: 'Helvetica Neue'
+    font-size: 14px
+    color: #AAB2AA
+    line-height: 1.3
