--- a/app/views/cart_products/deferred.html.haml
+++ b/app/views/cart_products/deferred.html.haml
@@ -13,23 +13,28 @@
 
 
 
-%ul.deferred-products.clearfix
+- if @cart_products.count > 0
+  %ul.deferred-products.clearfix
 
-  - i = 0
-  - @cart_products.each do |cart_product|
-    - i += 1
-    - if i == 5
-      %li.separator
-      - i = 1
+    - i = 0
+    - @cart_products.each do |cart_product|
+      - i += 1
+      - if i == 5
+        %li.separator
+        - i = 1
 
 
-    %li
-      .image
-        .overlay
-        %a.open-new-window{href: product_path(cart_product.product), target: '_blank'}
-        %a.remove-deferred-product{href: product_path(cart_product.product), target: '_blank'}
+      %li
+        .image
+          .overlay
+          %a.open-new-window{href: product_path(cart_product.product), target: '_blank'}
+          %a.remove-deferred-product{href: product_path(cart_product.product), target: '_blank'}
 
-        = image_tag cart_product.product.image_url(:thumb)
-      .name
-        = link_to cart_product.product.full_name, product_path(cart_product.product)
+          = image_tag cart_product.product.image_url(:thumb)
+        .name
+          = link_to cart_product.product.full_name, product_path(cart_product.product)
+
+- else
+  .not-found
+    Отложенных товаров не найдено
 
