--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -82,7 +82,7 @@ a
   .content
     height: 60px
     padding: 20px 0
-    font-family: 'Helvetica Neue'
+    font-family: 'HelveticaNeue-Light'
     font-size: 14px
     color: #AAB2AA
     line-height: 1.3
