--- a/app/assets/stylesheets/products.css.sass
+++ b/app/assets/stylesheets/products.css.sass
@@ -73,15 +73,18 @@
 
     .price
       width: 100%
-      margin-bottom: 5px
       font-size: 12px
       color: $font_color
+      height: 30px
+      line-height: 30px
 
       .value
         float: right
         text-align: right
         font-family: 'HelveticaNeue-Medium'
         font-size: 22px
+        height: 30px
+        line-height: 30px
 
         &.orange
           color: $orange_color
