--- a/app/views/layouts/_admin_topbar.html.haml
+++ b/app/views/layouts/_admin_topbar.html.haml
@@ -18,4 +18,9 @@
 
         %li{class: params[:controller] == 'admin/textures' ? 'active' : ''}
           %a{href: admin_textures_path}
-            Товары
+            Текстуры
+
+
+        %li{class: params[:controller] == 'admin/colors' ? 'active' : ''}
+          %a{href: admin_colors_path}
+            Цвета
