--- a/app/assets/stylesheets/products.css.sass
+++ b/app/assets/stylesheets/products.css.sass
@@ -7,7 +7,7 @@
     width: 100%
     height: 4px
     margin: 20px 0px
-    background: url('/assets/products_separator.png') no-repeat
+    background: url('products_separator.png') no-repeat
     background-size: 940px 1px
 
   li
@@ -56,7 +56,7 @@
         width: 25px
         height: 25px
 
-        background: url('/assets/open_new_window.png') no-repeat
+        background: url('open_new_window.png') no-repeat
         background-size: 100%
 
         cursor: pointer
