--- a/app/assets/stylesheets/cart.css.sass
+++ b/app/assets/stylesheets/cart.css.sass
@@ -78,7 +78,7 @@
           width: 24px
           height: 24px
           background: red
-          background: url('/assets/remove_cart_row_icon.png') no-repeat
+          background: image-url('remove_cart_row_icon.png') no-repeat
           background-size: 100%
           cursor: pointer
 
