--- a/app/assets/stylesheets/cart_deferred.css.sass
+++ b/app/assets/stylesheets/cart_deferred.css.sass
@@ -7,7 +7,7 @@
     width: 100%
     height: 4px
     margin: 20px 0px
-    background: url('/assets/products_separator.png') no-repeat
+    background: image-url('products_separator.png') no-repeat
 
   li
     display: inline-block
@@ -58,7 +58,7 @@
         width: 25px
         height: 25px
 
-        background: url('/assets/open_new_window.png') no-repeat
+        background: image-url('open_new_window.png') no-repeat
         background-size: 100%
 
         cursor: pointer
@@ -72,7 +72,7 @@
         width: 25px
         height: 25px
 
-        background: url('/assets/open_new_window.png') no-repeat
+        background: image_url('open_new_window.png') no-repeat
         background-size: 100%
 
         cursor: pointer
