--- a/app/assets/stylesheets/collections.css.sass
+++ b/app/assets/stylesheets/collections.css.sass
@@ -5,7 +5,7 @@
 
   li
     padding: 25px 0px
-    background: url('/assets/products_separator.png') no-repeat
+    background: image-url('products_separator.png') no-repeat
     background-position: bottom
 
     &:last-child
@@ -86,7 +86,7 @@
 
     .boofer
       height: 50px
-      background: url('/assets/products_separator.png') no-repeat
+      background: image-url('products_separator.png') no-repeat
       background-position: center
 
 
