--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -76,7 +76,7 @@ a
     width: 100%
     height: 2px
     margin: 20px 0px
-    background: url('/assets/products_separator.png') no-repeat
+    background: image-url('products_separator.png') no-repeat
     background-size: 940px 1px
 
   .content
