--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -15,8 +15,7 @@
           %li
             Страна-производитель:
             %span.bolder
-              -#= collection.country
-              Германия
+              = collection.country
 
           %li
             Класс:
