--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -109,8 +109,7 @@
           %td
             Страна производства:
           %td
-            -#= @product.country
-            Германия
+            = @product.country
 
         %tr
           %td
