--- a/app/assets/stylesheets/cart_deferred.css.sass
+++ b/app/assets/stylesheets/cart_deferred.css.sass
@@ -15,8 +15,8 @@
     width: 220px
     margin-right: 20px
 
-    &:nth-child(4n)
-      margin-right: 0px
+    //&:nth-child(4n)
+    //  margin-right: 0px
 
     .image
       position: relative
