--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -12,6 +12,10 @@
     color: $font_color
     height: 100px
     line-height: 100px
+
+  .order-call
+    float: right
+
   .phone
     float: right
     margin-top: 30px
@@ -23,8 +27,11 @@
     .small
       font-family: 'HelveticaNeue-Light'
       font-size: 14px
-      color: $soft_font_color
+      color: $blue_color
+      text-decoration: underline
       padding-top: 5px
+      text-align: left
+      cursor: pointer
 
 
 .navbar
