--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -1,5 +1,6 @@
 = simple_form_for product, url: url do |f|
   = f.input :name
+  = f.input :display_on_main_page
   = f.input :article
   = image_tag product.image_url(:thumb) if product.image?
   = f.input :image
