--- a/app/assets/stylesheets/products.css.sass
+++ b/app/assets/stylesheets/products.css.sass
@@ -16,8 +16,8 @@
     width: 220px
     margin-right: 20px
 
-    &:nth-child(4n)
-      margin-right: 0px
+    //&:nth-child(4n)
+    //  margin-right: 0px
 
     .image
       position: relative
@@ -64,9 +64,10 @@
 
     .name
       margin-bottom: 20px
+      height: 40px
       a
         font-family: 'HelveticaNeue-Regular'
-        line-height: 1.3
+        line-height: 1.5
         font-size: 16px
         text-decoration: underline
 
