--- a/app/views/admin/collections/_form.html.haml
+++ b/app/views/admin/collections/_form.html.haml
@@ -2,7 +2,7 @@
   = f.input :name
   = image_tag collection.logo_url(:thumb) if collection.logo?
   = f.input :logo
-  = f.input :country, as: :text
+  = f.input :country, as: :string
   = f.input :rank
   = f.input :sizes
   = f.input :about
