--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,10 +19,14 @@
       .topbar
         .logo
           Ламинат & CO
+
+        -#.order-call
+          Заказать звонок
         .phone
           (495) 720 20 20
           .small
-            ежедневно с 9:00 до 21:00
+            -#ежедневно с 9:00 до 21:00
+            Заказать бесплатный звонок
 
       %ul.navbar
 
