--- a/app/assets/stylesheets/cart_deferred.css.sass
+++ b/app/assets/stylesheets/cart_deferred.css.sass
@@ -72,7 +72,7 @@
         width: 25px
         height: 25px
 
-        background: image_url('open_new_window.png') no-repeat
+        background: image_url('remove_deferred_product.png') no-repeat
         background-size: 100%
 
         cursor: pointer
