--- a/app/views/cart_products/index.html.haml
+++ b/app/views/cart_products/index.html.haml
@@ -49,7 +49,7 @@
             = link_to '', cart_product_path(cart_product), class: 'remove-cart-row-icon', method: :delete, confirm: 'Вы уверены?'
 
 
-    .bottom
+    .cart-bottom
       .total-price
         Итого:
         %span.value
@@ -78,19 +78,4 @@
     Ваша корзина пуста
 
 
-
-#cart-modal
-  .title
-    Менеджер перезвонит вам через 15 минут
-
-
-  .modal-thank
-    Ваш заказ принят
-
-  .form
-    .left
-      %input{type: :text, name: :name, placeholder: 'Введите ваше имя'}
-      %input{type: :text, name: :phone, placeholder: 'Введите ваш телефон'}
-    .right
-      %textarea{name: :content, placeholder: 'Напишите адрес доставки и удобное для вас время'}
-      .button#send-form Отправить
+= render partial: 'cart_products/cart_modal'
