--- a/app/assets/stylesheets/cart.css.sass
+++ b/app/assets/stylesheets/cart.css.sass
@@ -83,48 +83,48 @@
           cursor: pointer
 
 
-  .bottom
-    width: 100%
+.cart-bottom
+  width: 100%
+  height: 60px
+  margin-top: 40px
+  .total-price
+    float: left
     height: 60px
-    margin-top: 40px
-    .total-price
-      float: left
-      height: 60px
-      line-height: 28px
-      font-family: 'HelveticaNeue-Light'
-      font-size: 16px
-      color: $soft_font_color
+    line-height: 28px
+    font-family: 'HelveticaNeue-Light'
+    font-size: 16px
+    color: $soft_font_color
 
-      .value
-        font-family: 'HelveticaNeue-Medium'
-        font-size: 24px
-        color: #DF6851
-
-    .make-order-button
-      float: right
-      margin-right: 20px
-      width: 220px
-      height: 60px
-      line-height: 60px
-      text-align: center
-      background: $green_color
-      color: #fff
+    .value
       font-family: 'HelveticaNeue-Medium'
-      font-size: 16px
-      cursor: pointer
+      font-size: 24px
+      color: #DF6851
 
-    .clear-cart-button
-      float: right
-      width: 220px
-      height: 58px
-      line-height: 58px
-      text-align: center
-      background: #fff
-      color: $font_color
-      border: 1px solid #ccc
-      font-family: 'HelveticaNeue-Light'
-      font-size: 16px
-      cursor: pointer
+  .make-order-button
+    float: right
+    margin-right: 20px
+    width: 220px
+    height: 60px
+    line-height: 60px
+    text-align: center
+    background: $green_color
+    color: #fff
+    font-family: 'HelveticaNeue-Medium'
+    font-size: 16px
+    cursor: pointer
+
+  .clear-cart-button
+    float: right
+    width: 220px
+    height: 58px
+    line-height: 58px
+    text-align: center
+    background: #fff
+    color: $font_color
+    border: 1px solid #ccc
+    font-family: 'HelveticaNeue-Light'
+    font-size: 16px
+    cursor: pointer
 
 
 #cart-modal
