--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
   %body
     .modal-overlay
     = render partial: 'products/article_modal'
+    = render partial: 'application/get_call'
 
     .wrapper
 
@@ -20,13 +21,13 @@
         .logo
           Ламинат & CO
 
-        -#.order-call
+        .order-call
           Заказать звонок
         .phone
           (495) 720 20 20
           .small
-            -#ежедневно с 9:00 до 21:00
-            Заказать бесплатный звонок
+            ежедневно с 9:00 до 21:00
+
 
       %ul.navbar
 
