--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -86,3 +86,82 @@ a
     font-size: 14px
     color: #AAB2AA
     line-height: 1.3
+
+
+
+
+#get-call-modal
+
+  display: none
+
+  z-index: 999
+
+  position: fixed
+  top: 50%
+  left: 50%
+
+  margin-left: -140px
+  margin-top: -160px
+
+  width: 280px
+  height: 280px
+  padding: 20px
+
+
+  background: #fff
+
+
+  .title
+    text-align: center
+    font-family: 'HelveticaNeue-Light'
+    font-size: 18px
+    color: $font_color
+    height: 50px
+    line-height: 50px
+    background: #F7F7F7
+
+
+  .modal-thank
+    display: none
+    width: 100%
+    height: 210px
+    line-height: 210px
+    text-align: center
+    font-family: 'HelveticaNeue-Light'
+    font-size: 24px
+    color: $font_color
+
+  .form
+    margin-top: 20px
+
+    input
+      display: block
+      float: left
+      margin-right: 20px
+      margin-bottom: 20px
+      width: 240px
+      height: 50px
+      background: #fff
+      border: 1px solid #ccc
+      padding: 0px 20px
+
+      font-family: 'HelveticaNeue-Light'
+      font-size: 14px
+      color: $font_color
+
+    .button
+      float: left
+      margin-bottom: 20px
+      width: 280px
+      height: 50px
+      line-height: 52px
+      text-align: center
+      background: $blue_color
+      color: #fff
+      font-family: 'HelveticaNeue-Regular'
+      font-size: 16px
+      cursor: pointer
+      border: none
+
+      &:hover
+        background: #509CF2
