--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -14,7 +14,21 @@
     line-height: 100px
 
   .order-call
+    background: $gray_bg_color
+    margin-top: 20px
+
+    width: 180px
+    height: 60px
+    line-height: 60px
+    text-align: center
+
+    margin-left: 30px
+    cursor: pointer
+
     float: right
+
+    font-family: 'HelveticaNeue-Light'
+
 
   .phone
     float: right
@@ -27,11 +41,9 @@
     .small
       font-family: 'HelveticaNeue-Light'
       font-size: 14px
-      color: $blue_color
-      text-decoration: underline
+      color: $soft_font_color
       padding-top: 5px
       text-align: left
-      cursor: pointer
 
 
 .navbar
