--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -17,6 +17,9 @@
   = f.input :volume
   = f.input :lifetime
   = f.input :lock_type
+  = f.input :facet
+  = f.input :stamping
+  = f.input :weight
   = f.input :country, as: :string
   = f.input :about
 
