--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -11,7 +11,9 @@
     font-size: 24px
     color: $font_color
     height: 100px
-    line-height: 100px
+
+    img
+      margin-top: 30px
 
   .order-call
     background: $gray_bg_color
