--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,2 +1,3 @@
-= render partial: 'products/filter'
+-#= render partial: 'products/filter'
+= image_tag 'actions/1.jpg', width: 940
 = render partial: 'products/list', locals: {products: @products}
