--- a/app/assets/stylesheets/brands.css.sass
+++ b/app/assets/stylesheets/brands.css.sass
@@ -6,6 +6,7 @@
   li
     padding: 25px 0px
     background: url('/assets/products_separator.png') no-repeat
+    background-size: 940px 1px
     background-position: bottom
 
     &:last-child
@@ -73,6 +74,19 @@
     .boofer
       height: 50px
       background: url('/assets/products_separator.png') no-repeat
+      background-size: 940px 1px
       background-position: center
 
 
+
+.brands-list
+  margin-top: 50px
+  li
+    float: left
+    width: 220px
+    height: 80px
+    margin-right: 20px
+    margin-bottom: 20px
+
+    &:nth-child(4n)
+      margin-right: 0px
