--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -70,6 +70,14 @@ a
   text-align: center
 
 
+.section-title
+  margin-top: 50px
+  text-align: center
+  font-family: 'HelveticaNeue-Light'
+  font-size: 24px
+  color: $font_color
+
+
 .footer
   margin-top: 50px
   .separator
