--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -15,20 +15,26 @@
     img
       margin-top: 30px
 
+  .descriptor
+    float: left
+    font-family: 'HelveticaNeue-Light'
+    font-size: 16px
+    line-height: 1.5
+    margin-left: 80px
+    padding: 30px 15px
+    //background: $gray_bg_color
+
   .order-call
     background: $gray_bg_color
-    margin-top: 20px
+    margin-top: 5px
 
-    width: 180px
-    height: 60px
-    line-height: 60px
+    width: 165px
+    height: 25px
+    line-height: 25px
     text-align: center
 
-    margin-left: 30px
+    font-size: 14px
     cursor: pointer
-
-    float: right
-
     font-family: 'HelveticaNeue-Light'
 
 
