--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -8,7 +8,7 @@
   = f.association :color
   = f.input :product_type
   = f.input :price
-  = f.input :sale_price
+  = f.input :price_per_meter
   = f.input :meters_per_pack
   = f.input :number_per_pack
   = f.input :length
