--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -88,6 +88,8 @@ a
     background-size: 940px 1px
 
   .content
+    float: left
+    width: 300px
     height: 60px
     padding: 20px 0
     font-family: 'HelveticaNeue-Light'
