--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -24,34 +24,39 @@
     padding: 30px 15px
     //background: $gray_bg_color
 
-  .order-call
-    background: $gray_bg_color
-    margin-top: 5px
+.order-call
+  background: $gray_bg_color
+  margin-top: 5px
 
-    width: 165px
-    height: 25px
-    line-height: 25px
-    text-align: center
+  width: 165px
+  height: 25px
+  line-height: 25px
+  text-align: center
 
-    font-size: 14px
-    cursor: pointer
-    font-family: 'HelveticaNeue-Light'
+  font-size: 14px
+  cursor: pointer
+  font-family: 'HelveticaNeue-Light'
 
 
+.footer
   .phone
-    float: right
-    margin-top: 30px
-    text-align: right
-    font-family: 'HelveticaNeue-Medium'
-    font-size: 24px
-    color: $font_color
+    margin-top: 20px
 
-    .small
-      font-family: 'HelveticaNeue-Light'
-      font-size: 14px
-      color: $soft_font_color
-      padding-top: 5px
-      text-align: left
+
+.phone
+  float: right
+  margin-top: 30px
+  text-align: right
+  font-family: 'HelveticaNeue-Medium'
+  font-size: 24px
+  color: $font_color
+
+  .small
+    font-family: 'HelveticaNeue-Light'
+    font-size: 14px
+    color: $soft_font_color
+    padding-top: 5px
+    text-align: left
 
 
 .navbar
