--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,4 +60,8 @@
           %br
           Все права защищены
 
+        .phone
+          (495) 532 64 38
+          .order-call Заказать звонок
+
     = render partial: 'layouts/metrika'
