--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -143,7 +143,7 @@
             = @product.stamping
 
 
-- if @last_viewed_products
+-# if @last_viewed_products
   .page-title{style: 'margin-top: 50px;'}
     Последние просмотренные товары
   = render partial: 'products/list', locals: {products: @last_viewed_products}
