--- a/app/assets/stylesheets/filter.css.sass
+++ b/app/assets/stylesheets/filter.css.sass
@@ -140,7 +140,7 @@
   top: 50%
   left: 50%
 
-  width: 900px
+  width: 40px
   height: 550px
 
   overflow-y: scroll
@@ -160,7 +160,7 @@
 
 
   .textures
-    padding: 20px
+    padding: 20px 10px
 
     .texture
       float: left
