--- a/app/views/products/_filter.html.haml
+++ b/app/views/products/_filter.html.haml
@@ -77,7 +77,7 @@
 
   .title
     Выберите текстуру из списка ниже
-  .textures
+  .textures.clearfix
 
     .texture{texture_id: 'empty'}
       .empty не выбрано
