--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -99,9 +99,9 @@
 
         %tr
           %td
-            Объем упаковки(м3):
+            Использование теплых полов:
           %td
-            = @product.volume
+            = @product.heat_floor
 
 
     .table
@@ -138,7 +138,7 @@
 
         %tr
           %td
-            Тиснение
+            Отделка поверхности:
           %td
             = @product.stamping
 
