--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -14,7 +14,7 @@
   = f.input :length
   = f.input :width
   = f.input :height
-  = f.input :volume
+  = f.input :heat_floor
   = f.input :lifetime
   = f.input :lock_type
   = f.input :facet
